--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,10 +12,10 @@
             <div class="d-flex justify-content-between align-items-center">
               <div class="">
                 <label class="mt-3">
-                  {{ device.device_name }}
+                  {{ device.device_category }}
                 </label>
                 <h3 class="card-title">
-                  {{ device.device_serial }}
+                  {{ device.device_name }}
                 </h3>
               </div>
               <!-- <button class="btn-primary btn text-end"  mat-raised-button>
