--- a/src/app/modules/device-management/device-listing/device-listing.component.html
+++ b/src/app/modules/device-management/device-listing/device-listing.component.html
@@ -60,7 +60,7 @@
                   </th>
                   <td mat-cell *matCellDef="let row">
                     <div  *ngIf="user&&user.user_id == row.owner">
-                      <mat-icon
+                      <!-- <mat-icon
                         class="me-2 pointer position-relative"
                         color="success"
                         style="z-index: 99999"
@@ -69,7 +69,7 @@
                         matTooltipClass="custom-tooltip"
                         matTooltip="click to view"
                         >remove_red_eye</mat-icon
-                      >
+                      > -->
                       <mat-icon
                         class="me-2 pointer position-relative"
                         color="primary"
