--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -33,8 +33,8 @@
                             <mat-error *ngIf="hasError('recipe_type', 'required')">Recipe Type <strong>required</strong></mat-error>
                         </mat-form-field>
                         <mat-form-field class="w-100 mb-3" appearance="outline">
-                            <mat-label>Enter Temperature</mat-label>
-                            <input matInput placeholder="Enter Temperature"
+                            <mat-label>Enter Container Temperature</mat-label>
+                            <input matInput placeholder="Enter Container Temperature"
                             [formControlName]="'recipe_temperature'"
                             required>
                             <mat-error *ngIf="hasError('recipe_temperature', 'required')">Recipe Temperature <strong>required</strong></mat-error>
@@ -85,14 +85,14 @@
             <div class="col-lg-5">
                     <div class="d-flex">
                         <div type='button' [ngClass]="getStyle('B1')" style="width: 150px; height:75px;" (click)="addIngrediants('B1')">B1</div>
-                        <div type='button' [ngClass]="getStyle('B2')" style="width: 150px; height:75px;" (click)="addIngrediants('B2')">B2</div>
+                        <div type='button' [ngClass]="getStyle('B8')" style="width: 150px; height:75px;" (click)="addIngrediants('B8')">B8</div>
                     </div>
   
                     <div class="d-flex ">
 
                         <div class="d-grid">
-                            <div type='button' [ngClass]="getStyle('B7')" style="width: 80px; height:98px;" (click)="addIngrediants('B7')">B7</div>
-                            <div type='button' [ngClass]="getStyle('B8')" style="width: 80px; height:98px;" (click)="addIngrediants('B8')">B8</div>
+                            <div type='button' [ngClass]="getStyle('B2')" style="width: 80px; height:98px;" (click)="addIngrediants('B2')">B2</div>
+                            <div type='button' [ngClass]="getStyle('B3')" style="width: 80px; height:98px;" (click)="addIngrediants('B3')">B3</div>
 
                         </div>
 
@@ -101,21 +101,21 @@
                             <div class="d-flex" style="flex-wrap: wrap; justify-content: center;">
                                 <div type='button' [ngClass]="getStyle2('S1')" style="width: 25px; height:25px;" (click)="addIngrediants('S1')">S1</div>
                                 <div type='button' class="glass-effect  bg-primary" style="width: 25px; height:25px;" ></div>
+                                <div type='button' [ngClass]="getStyle2('S7')" style="width: 25px; height:25px;" (click)="addIngrediants('S7')">S7</div>
                                 <div type='button' [ngClass]="getStyle2('S2')" style="width: 25px; height:25px;" (click)="addIngrediants('S2')">S2</div>
-                                <div type='button' [ngClass]="getStyle2('S3')" style="width: 25px; height:25px;" (click)="addIngrediants('S3')">S3</div>
                                 <div type='button' class="glass-effect  bg-primary" style="width: 25px; height:25px;" ></div>
+                                <div type='button' [ngClass]="getStyle2('S6')" style="width: 25px; height:25px;" (click)="addIngrediants('S6')">S6</div>
+                                <div type='button' [ngClass]="getStyle2('S3')" style="width: 25px; height:25px;" (click)="addIngrediants('S3')">S3</div>
                                 <div type='button' [ngClass]="getStyle2('S4')" style="width: 25px; height:25px;" (click)="addIngrediants('S4')">S4</div>
                                 <div type='button' [ngClass]="getStyle2('S5')" style="width: 25px; height:25px;" (click)="addIngrediants('S5')">S5</div>
-                                <div type='button' [ngClass]="getStyle2('S6')" style="width: 25px; height:25px;" (click)="addIngrediants('S6')">S6</div>
-                                <div type='button' [ngClass]="getStyle2('S7')" style="width: 25px; height:25px;" (click)="addIngrediants('S7')">S7</div>
                             </div>
   
   
                         </div>
                         <div class="d-grid">
-                            <div  type='button'[ngClass]="getStyle('B3')" style="width: 80px; height:98px;" (click)="addIngrediants('B3')">B3</div>
+                            <div  type='button'[ngClass]="getStyle('B7')" style="width: 80px; height:98px;" (click)="addIngrediants('B7')">B7</div>
 
-                            <div type='button' [ngClass]="getStyle('B4')" style="width: 80px; height:98px;" (click)="addIngrediants('B4')">B4</div>
+                            <div type='button' [ngClass]="getStyle('B6')" style="width: 80px; height:98px;" (click)="addIngrediants('B6')">B6</div>
 
                         </div>
 
@@ -123,9 +123,9 @@
                     </div>
   
                     <div class="d-flex">
-                        <div type='button' [ngClass]="getStyle('B5')" style="width: 150px; height:75px;" (click)="addIngrediants('B5')">B5</div>
+                        <div type='button' [ngClass]="getStyle('B4')" style="width: 150px; height:75px;" (click)="addIngrediants('B4')">B4</div>
 
-                        <div type='button' [ngClass]="getStyle('B6')" style="width: 150px; height:75px;" (click)="addIngrediants('B6')">B6</div>
+                        <div type='button' [ngClass]="getStyle('B5')" style="width: 150px; height:75px;" (click)="addIngrediants('B5')">B5</div>
 
 
                     </div>
