--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,37 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
+        <button class="btn-primary btn text-end"  mat-raised-button>
+          <mat-icon style="line-height: 23px;">add</mat-icon>
+          Add Device
+      </button>
+      <div class="card card-stats" *ngIf="devices.length==0">
+        <div
+          class="card-header text-start card-header-warning card-header-icon"
+        >
+          <div class="card-icon">
+            <img src="assets/img/apple-icon-.png" />
+          </div>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="">
+              <!-- <label class="mt-3">
+                {{ device.device_category }}
+              </label> -->
+              <h3 class="card-title">
+                <!-- {{ device.device_name }} -->
+                No Device Added!
+              </h3>
+            </div>
+          
+          </div>
+        </div>
+        <div class="card-footer">
+          <div class="stats">
+            <!-- <i class="material-icons">update</i> Just Updated -->
+            {{ device.device_status }}
+          </div>
+        </div>
+      </div>
         <div class="card card-stats" *ngFor="let device of devices">
           <div
             class="card-header text-start card-header-warning card-header-icon"
@@ -18,10 +49,7 @@
                   {{ device.device_name }}
                 </h3>
               </div>
-              <!-- <button class="btn-primary btn text-end"  mat-raised-button>
-                                <mat-icon style="line-height: 23px;">add</mat-icon>
-                                Add Device
-                            </button> -->
+            
             </div>
           </div>
           <div class="card-footer">
