--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -26,12 +26,11 @@
           
           </div>
         </div>
-        <div class="card-footer">
+        <!-- <div class="card-footer">
           <div class="stats">
-            <!-- <i class="material-icons">update</i> Just Updated -->
             {{ device.device_status }}
           </div>
-        </div>
+        </div> -->
       </div>
         <div class="card card-stats" *ngFor="let device of devices">
           <div
