--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,6 +9,9 @@
             <span class="navbar-toggler-icon icon-bar"></span>
             <span class="navbar-toggler-icon icon-bar"></span>
         </button>
+        <button type="button" (click)="openCart()">
+                Cart
+        </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <!-- <form class="navbar-form">
                 <div class="input-group input-group shadow border px-4 py-2 bg-white rounded">
