--- a/src/app/components/store-cart/store-cart.component.html
+++ b/src/app/components/store-cart/store-cart.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="row px-3">
     <div class="col-lg-6">
-      <h3 class="text-primary mt-3 fw-bold text-xl">Add Device</h3>
+      <h3 class="text-primary mt-3 fw-bold text-xl">Cart</h3>
     </div>
     <div class="col-lg-6 text-right">
       <button mat-button (click)="onClose(false)">
@@ -12,18 +12,73 @@
 </div>
 
 <div class="container px-3 pt-3">
-  
-  <div class="text-right mb-3 mt-4 pt-5 me-3">
-    <button
-      mat-raised-button
-      class="mr-3 text-white bg-secondary"
-      (click)="onSubmit()"
-      [disabled] = "!usersForm.valid"
-    >
-      Submit
-    </button>
-    <button mat-raised-button color="primary" (click)="onClose(false)">
-      Cancel
-    </button>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="container mt-4">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="cart-item">
+              <div class="row">
+
+                <div class="col-md-8 store-card">
+                  <img src="assets/img/apple-icon-.png" alt="Speedway" style="width: 100px; height: auto;"> <!-- Update the path to your image -->
+                  <div>
+                    <h5>Speedway (390 East Exchange Street)</h5>
+                    <p>Convenience · Drinks · Snacks · Everyday Essentials</p>
+                    <address>390 East Exchange Street, Akron, OH 44304-1853</address>
+                  </div>
+                </div>
+                <div class="col-md-4 mt-5">
+                  <div class="quantity-controls">
+                    <mat-icon class="pointer position-relative"  color="warn"
+                              matTooltipPosition="above" matTooltipClass="custom-tooltip" matTooltip="click to delete">delete</mat-icon>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Repeat the .cart-item div for each product in the cart -->
+          </div>
+          <div class="col-md-4">
+            <div class="cart-total">
+              <div class="subtotal-section">
+                <h5>Total</h5>
+                <p>PKR 6,990 PKR</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <div class="row border-top">
+        <div class="col-lg-12 text-end">
+            <div class="cart-total">
+              <div class="subtotal-section">
+                <h5>Subtotal</h5>
+                <p>PKR 6,990 PKR</p>
+                <p>Taxes and shipping calculated at checkout</p>
+                <button class="btn btn-black">CHECK OUT</button>
+                <button class="btn ml-3 btn-outline-secondary">CONTINUE SHOPPING</button>
+              </div>
+            </div>
+        </div>
+      </div>
+
+      </div>
+    </div>
   </div>
+
+
+<!--  <div class="text-right mb-3 mt-4 pt-5 me-3">-->
+<!--    <button-->
+<!--      mat-raised-button-->
+<!--      class="mr-3 text-white bg-secondary"-->
+<!--      (click)="onSubmit()"-->
+<!--      [disabled] = "!usersForm.valid"-->
+<!--    >-->
+<!--      Submit-->
+<!--    </button>-->
+<!--    <button mat-raised-button color="primary" (click)="onClose(false)">-->
+<!--      Cancel-->
+<!--    </button>-->
+<!--  </div>-->
 </div>
