--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,9 +9,14 @@
             <span class="navbar-toggler-icon icon-bar"></span>
             <span class="navbar-toggler-icon icon-bar"></span>
         </button>
-        <button type="button" (click)="openCart()">
-                Cart
-        </button>
+<!--        <button type="button" >-->
+<!--                Cart-->
+<!--        </button>-->
+
+
+
+
+
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <!-- <form class="navbar-form">
                 <div class="input-group input-group shadow border px-4 py-2 bg-white rounded">
@@ -22,6 +27,11 @@
                     </button>
                 </div>
             </form> -->
+            <i class="material-icons" (click)="openCart()" style="cursor: pointer;">
+                shopping_cart
+            </i>
+
+
             <ul class="navbar-nav px-3">
 <!--                <li class="nav-item">-->
 <!--                    <a class="nav-link"  >-->
