cart & checkout done

--- a/src/app/components/store-checkout/store-checkout.component.html
+++ b/src/app/components/store-checkout/store-checkout.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="row px-3">
     <div class="col-lg-6">
-      <h3 class="text-primary mt-3 fw-bold text-xl">Cart</h3>
+      <h3 class="text-primary mt-3 fw-bold text-xl">Checkout</h3>
     </div>
     <div class="col-lg-6 text-right">
       <button mat-button (click)="onClose(false)">
