--- a/src/app/modules/recipeManagement/recipe-list/recipe.component.html
+++ b/src/app/modules/recipeManagement/recipe-list/recipe.component.html
@@ -8,9 +8,6 @@
             Add Recipe
           </button>
         </div>
-
-
-  
       </div>
     </div>
 
@@ -75,8 +72,10 @@
                   <button type="button" class=" btn text-end"  style="background:black;" mat-raised-button>
                     Cook Now!
                    </button>
+                   <button type="button" (click)="ListToShop(row.recipe_id)" class=" btn text-end"  style="background:black;" mat-raised-button>
+                    {{ row.isListed === "0" ? 'List For Sale' : 'Unlist For Sale' }}
+                   </button>
                 </div>
-    
               </div>
     
     
