--- a/src/app/modules/storeFront/storeFront/storeFront.component.html
+++ b/src/app/modules/storeFront/storeFront/storeFront.component.html
@@ -44,7 +44,8 @@
                         <p>{{row.recipe_description}}</p>
                         <!-- <address>390 East Exchange Street, Akron, OH 44304-1853</address> -->
                     </div>
-                    <button mat-button (click)="addToCart(row)">Add to Cart!
+                    <!-- [disabled]="ifAdded(row.recipe_id)" -->
+                    <button *ngIf="ifAdded(row.recipe_id)"  mat-button (click)="addToCart(row)">Add to Cart!
                         <!-- <mat-icon class="mx-0">clear</mat-icon> -->
                       </button>
                 </div>
