--- a/src/app/modules/storeFront/storeFront/storeFront.component.html
+++ b/src/app/modules/storeFront/storeFront/storeFront.component.html
@@ -13,9 +13,9 @@
                               <div class="search-box mt-4">
                                   <mat-form-field class="example-full-width" appearance="outline">
                                       <mat-label>Favorite food</mat-label>
-                                      <input matInput placeholder="Ex. Pizza" value="Sushi">
+                                      <input matInput placeholder="Ex. Pizza" [(ngModel)]="item">
                                   </mat-form-field>
-                                  <button class="btn btn-dark mt-3">Find Food</button>
+                                  <button class="btn btn-dark mt-3" (click)="searchRecipe();">Find Food</button>
                               </div>
                           </div>
                       </section>
@@ -42,6 +42,7 @@
                     <div>
                         <h5>{{row.recipe_name}}</h5>
                         <p>{{row.recipe_description}}</p>
+                        <span>{{row.total_price}} <strong>PKR</strong></span>
                         <!-- <address>390 East Exchange Street, Akron, OH 44304-1853</address> -->
                     </div>
                     <!-- [disabled]="ifAdded(row.recipe_id)" -->
