--- a/src/app/components/store-cart/store-cart.component.html
+++ b/src/app/components/store-cart/store-cart.component.html
@@ -56,7 +56,7 @@
                 <h5>Subtotal</h5>
                 <p>{{total_price}} PKR</p>
                 <p>Taxes and shipping calculated at checkout</p>
-                <button class="btn btn-black">CHECK OUT</button>
+                <button class="btn btn-black" (click)="checkout()">CHECK OUT</button>
                 <button class="btn ml-3 btn-outline-secondary">CONTINUE SHOPPING</button>
               </div>
             </div>
