--- a/src/app/components/store-checkout/store-checkout.component.html
+++ b/src/app/components/store-checkout/store-checkout.component.html
@@ -12,13 +12,19 @@
 </div>
 
 <div class="container px-3 pt-3">
-  
+  <label for="card-element">
+    Credit or debit card
+</label>
+<div id="card-element">
+    <!-- a Stripe Element will be inserted here. -->
+</div>
+<div id="card-errors" role="alert"></div>
   <div class="text-right mb-3 mt-4 pt-5 me-3">
     <button
       mat-raised-button
       class="mr-3 text-white bg-secondary"
-      (click)="onSubmit()"
-      [disabled] = "!usersForm.valid"
+      (click)="createToken()"
+      [disabled] = "isError"
     >
       Submit
     </button>
