--- a/src/app/components/store-cart/store-cart.component.html
+++ b/src/app/components/store-cart/store-cart.component.html
@@ -16,6 +16,13 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="container mt-4">
+
+
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <img class="mx-auto"  style="width: 250px;" src="assets/img/empty.gif" />
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-8">
             <div class="cart-item">
