--- a/src/app/modules/storeFront/storeFront/storeFront.component.scss
+++ b/src/app/modules/storeFront/storeFront/storeFront.component.scss
@@ -14,7 +14,7 @@
 /* Custom styles for the layout */
 .store-card {
   display: flex;
-  align-items: center;
+  //align-items: center;
   gap: 10px; /* Adjust the gap as needed */
   background-color: #fff; /* Adjust the background color as needed */
   margin-bottom: 10px; /* Space between cards */
