--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,7 +31,13 @@
                 <i class="material-icons" (click)="openCart()" style="cursor: pointer;">
                     shopping_cart
                 </i>
-                <span *ngIf="cart" class="position-absolute top-0 start-100 badge rounded-pill badge-notification bg-danger" style="background-color: #d9534f  !important;;">
+                <span *ngIf="cart" class="position-absolute top-0 start-100 badge rounded-pill badge-notification bg-danger"
+                      style="
+                      background-color: #e2b142 !important;
+                          top: -9px;
+                          color: white;
+                          left: 12px;
+                        ">
                     {{cart}}
                 </span>
             </span>
