--- a/src/app/components/store-checkout/store-checkout.component.html
+++ b/src/app/components/store-checkout/store-checkout.component.html
@@ -11,25 +11,43 @@
   </div>
 </div>
 
-<div class="container px-3 pt-3">
-  <label for="card-element">
-    Credit or debit card
-</label>
-<div id="card-element">
-    <!-- a Stripe Element will be inserted here. -->
+
+<div class="container mt-3">
+  <form>
+    <!-- Credit Card Option -->
+    <div class="mb-3">
+      <div class="form-check w-100 d-flex justify-content-between " style="place-items: end;">
+        <label class="form-check-label">Credit or Debit Card</label>
+        <!-- Credit card logos -->
+        <span class="float-end border rounded p-2 mr-4">
+          <img src="assets/img/visa.png" class="mr-4" alt="Visa" style="width: 40px;">
+          <img src="assets/img/mastercard.png" alt="MasterCard" style="width: 40px;">
+        </span>
+      </div>
+    </div>
+
+
+    <div id="card-element">
+      <!-- a Stripe Element will be inserted here. -->
+    </div>
+    <div class="ml-4../" style="font-size: 10px;" id="card-errors" role="alert"></div>
+    <div class="text-right mb-3 mt-4 pt-5 me-3">
+      <button
+              mat-raised-button
+              class="mr-3 text-white bg-secondary"
+              (click)="createToken()"
+              [disabled] = "isError"
+      >
+        Submit
+      </button>
+      <button mat-raised-button color="primary" (click)="onClose(false)">
+        Cancel
+      </button>
+    </div>
+
+  </form>
 </div>
-<div id="card-errors" role="alert"></div>
-  <div class="text-right mb-3 mt-4 pt-5 me-3">
-    <button
-      mat-raised-button
-      class="mr-3 text-white bg-secondary"
-      (click)="createToken()"
-      [disabled] = "isError"
-    >
-      Submit
-    </button>
-    <button mat-raised-button color="primary" (click)="onClose(false)">
-      Cancel
-    </button>
-  </div>
-</div>
+
+
+
+
