--- a/src/app/modules/recipeManagement/recipe-list/recipe.component.html
+++ b/src/app/modules/recipeManagement/recipe-list/recipe.component.html
@@ -41,13 +41,13 @@
     </div>
   
   
-    <div class="mat-elevation-z8">
-      <div *ngFor="let row of dataSource?.data" class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
+    <div>
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6" *ngFor="let row of dataSource?.data" >
           <div class="card card-stats">
             <div class="card-header text-start card-header-warning card-header-icon">
               <div class="card-icon">
-                <img [src]="row.recipe_pic" (error)="getImg('')"  style="width: 200px;" />
+                <img [src]="row.recipe_pic" (error)="getImg('')"  style="height: 100px;" />
               </div>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="">
@@ -63,21 +63,24 @@
                      <strong>{{row.total_price}} USD</strong>
                   </p>
                 </div>
-                <div class="">
-                  <button type="button" class="btn-primary btn text-end mr-3" [routerLink]="['/recipeManagement/add-recipe/',row.recipe_id]"  mat-raised-button>
-                    <mat-icon style="line-height: 23px;">create</mat-icon>
-    
-                  </button>
-                  <button type="button" class=" btn text-end mr-3"  style="background:red;" (click)="onDelete(row.recipe_id)" mat-raised-button>
-                    <mat-icon style="line-height: 23px;">delete_forever</mat-icon>
-    
-                  </button>
-                  <button type="button" class=" btn text-end"  style="background:black;" mat-raised-button>
-                    Cook Now!
-                   </button>
-                   <button type="button" (click)="ListToShop(row)" class=" btn text-end"  style="background:black;" mat-raised-button>
-                    {{ row.isListed === "0" ? 'List For Sale' : 'Delist For Sale' }}
-                   </button>
+                <div class="mt-3" style="display: grid; align-content: space-between; height: 120px;">
+
+                  <div class="text-right">
+                    <mat-icon class="text-primary" [routerLink]="['/recipeManagement/add-recipe/',row.recipe_id]" style="line-height: 23px;">create</mat-icon>
+
+                    <mat-icon  (click)="onDelete(row.recipe_id)" style="line-height: 23px; color: red;">delete_forever</mat-icon>
+
+                  </div>
+                  <div class="text-right " style="display: grid;">
+                    <button type="button" class=" btn text-end"  style="background:black;" mat-raised-button>
+                      Cook Now!
+                    </button>
+                    <button type="button" (click)="ListToShop(row)" class=" btn text-end"  style="background:black;" mat-raised-button>
+                      {{ row.isListed === "0" ? 'List For Sale' : 'Delist For Sale' }}
+                    </button>
+                  </div>
+
+
                 </div>
               </div>
     
