--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -19,14 +19,14 @@
                             <mat-error *ngIf="hasError('recipe_name', 'required')">Recipe Name <strong>required</strong></mat-error>
                         </mat-form-field>
 
-                        <mat-form-field class="w-100 mb-3" appearance="outline">
+                        <!-- <mat-form-field class="w-100 mb-3" appearance="outline">
                             <mat-label>Enter Price</mat-label>
                             <input matInput placeholder="Enter price"
                             [formControlName]="'total_price'"
                             appNumberOnly
                             required>
                             <mat-error *ngIf="hasError('total_price', 'required')">Price <strong>required</strong></mat-error>
-                        </mat-form-field>
+                        </mat-form-field> -->
 
                         <mat-form-field class="w-100 mb-3" appearance="outline" >
                             <mat-label>Enter Recipe Type</mat-label>
