--- a/src/app/modules/recipeManagement/price-recipe/price-recipe.component.html
+++ b/src/app/modules/recipeManagement/price-recipe/price-recipe.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="row px-3">
     <div class="col-lg-6">
-      <h3 class="text-primary mt-3 fw-bold text-xl">List to shop</h3>
+      <h3 class="text-primary mt-3 fw-bold text-xl">List for Sale</h3>
     </div>
     <div class="col-lg-6 text-right">
       <button mat-button (click)="onClose(false)">
@@ -14,23 +14,21 @@
 <div class="container px-3 pt-3">
   <form  *ngIf="data.isListed==0"  class="mt-6" [formGroup]="usersForm">
     <div class="row px-3">
-      <div class="col-lg-9">
-        <div class="row mb-3 px-3">
-          <div class="col-lg-12">
-            <mat-form-field class="w-100" appearance="outline">
-              <mat-label>Price</mat-label>
-              <textarea matInput placeholder="Enter Price" [formControlName]="'total_price'"></textarea>
-              <mat-error>Price is Required</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="row mb-3 px-3">
-          <div class="col-lg-12">
-            Total price would be: {{getTotalPrice()}}
-          </div>
-        </div>
+      <div class="col-lg-12">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Price</mat-label>
+          <input matInput placeholder="Enter Price" [formControlName]="'total_price'"/>
+          <mat-error>Price is Required</mat-error>
+        </mat-form-field>
+           
       </div>
     </div>
+    <div class="row px-3">
+      <div class="col-lg-12"> Commission fee: 5$ will be charged.
+        </div></div>
+    <!-- <div class="row px-3">
+      <div class="col-lg-12"> Total price would be: {{getTotalPrice()}}
+        </div></div> -->
 
 
   </form>
