--- a/src/app/modules/recipeManagement/recipe-list/recipe.component.html
+++ b/src/app/modules/recipeManagement/recipe-list/recipe.component.html
@@ -59,23 +59,21 @@
                   <p class="text-primary">
                     {{row.recipe_description}}
                   </p>
-                  <p class="text-primary">
-                     <strong>{{row.total_price}} USD</strong>
-                  </p>
+                 
                 </div>
                 <div class="mt-3" style="display: grid; align-content: space-between; height: 120px;">
 
                   <div class="text-right">
-                    <mat-icon class="text-primary" [routerLink]="['/recipeManagement/add-recipe/',row.recipe_id]" style="line-height: 23px;">create</mat-icon>
+                    <mat-icon *ngIf="UserId == row.created_by" class="text-primary" [routerLink]="['/recipeManagement/add-recipe/',row.recipe_id]" style="line-height: 23px;">create</mat-icon>
 
-                    <mat-icon  (click)="onDelete(row.recipe_id)" style="line-height: 23px; color: red;">delete_forever</mat-icon>
+                    <mat-icon *ngIf="UserId == row.created_by" (click)="onDelete(row.recipe_id)" style="line-height: 23px; color: red;">delete_forever</mat-icon>
 
                   </div>
                   <div class="text-right " style="display: grid;">
                     <button type="button" class=" btn text-end"  style="background:black;" mat-raised-button>
                       Cook Now!
                     </button>
-                    <button type="button" (click)="ListToShop(row)" class=" btn text-end"  style="background:black;" mat-raised-button>
+                    <button type="button" *ngIf="UserId == row.created_by" (click)="ListToShop(row)" class=" btn text-end"  style="background:black;" mat-raised-button>
                       {{ row.isListed === "0" ? 'List For Sale' : 'Delist For Sale' }}
                     </button>
                   </div>
@@ -90,7 +88,7 @@
             </div>
             <div class="card-footer">
               <div class="stats">
-                <i class="material-icons">update</i> Just Updated
+                <i class="material-icons">update</i> {{row.updated_date | date:'short'}}
               </div>
             </div>
           </div>
@@ -98,71 +96,6 @@
     
       </div>
     
-      <table hidden mat-table [dataSource]="dataSource" matSort class="mat-table">
-        <ng-container matColumnDef="recipe_id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-          <td mat-cell *matCellDef="let row">
-            <!-- <span *ngIf="row?.profile_pic_path">
-              <a class="btn avatar-button rounded-circle overflow-hidden p-0 m-0 d-inline-flex">
-                <img
-                  class="avatar-span border-0 d-inline-flex align-items-center justify-content-center text-white text-uppercase text-nowrap font-weight-normal"
-                  [src]="getImg(row.profile_pic_path)" />
-              </a>
-            </span>
-            <span *ngIf="!row?.profile_pic_path">
-              <a class="btn avatar-button rounded-circle overflow-hidden p-0 m-0 d-inline-flex">
-                <img
-                  class="avatar-span border-0 d-inline-flex align-items-center justify-content-center text-white text-uppercase text-nowrap font-weight-normal" />
-              </a>
-            </span> -->
-  
-            <span class="font-bold text-primary ms-2">{{row.recipe_id}}</span>
-          </td>
-        </ng-container>
-  
-        <ng-container matColumnDef="recipe_name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Recipe Name </th>
-          <td mat-cell *matCellDef="let row"> {{row.recipe_name}} </td>
-        </ng-container>
-  
-        <ng-container matColumnDef="recipe_description">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-          <td mat-cell *matCellDef="let row"> {{row.recipe_description}} </td>
-        </ng-container>
-  
-        
-  
-  
-  
-        <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
-          <td mat-cell *matCellDef="let row">
-  
-            <mat-icon class="me-2 pointer position-relative" color="primary" style="z-index: 99999"
-               [routerLink]="['/recipeManagement/add-recipe/',row.recipe_id]" matTooltipPosition="above" matTooltipClass="custom-tooltip"
-              matTooltip="click to edit">edit</mat-icon>
-  
-  
-            <mat-icon class="pointer position-relative" (click)="onDelete(row.recipe_id)" style="z-index: 99999" color="warn"
-              matTooltipPosition="above" matTooltipClass="custom-tooltip" matTooltip="click to delete">delete</mat-icon>
-  
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="cook">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Cook </th>
-          <td mat-cell *matCellDef="let row">   <button mat-raised-button class="mr-3 bg-secondary">
-            Cook Now!
-        </button> </td>
-        </ng-container>
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-        <!-- Row shown when there is no matching data. -->
-        <!-- <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-              </tr> -->
-      </table>
       <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [length]="length" (page)="handlePageEvent($event)" showFirstLastButtons></mat-paginator>
   
     </div>
